# previsao_de_resultados_de_partidas_de_futebol_usando_redes_neurais_de_grafos_heterogeneos

./: README.md  pyproject.toml
data/raw/: main_leagues.json  pull_fixtures.json
notebooks/: FIGURA_distribuicao_das_classes_por_liga.ipynb  FIGURA_distribuicao_gols_por_liga_por_ano.ipynb  TABELA_distriuicao_classes_treino_teste.ipynb  verificar_quais_dados_possuo.ipynb
src/data_preprocessing/: st00_add_fixture_ao_banco.py  st01_add_lineups_ao_banco.py
