[tool.poetry]
name = "previsao-de-resultados-de-partidas-de-futebol-usando-redes-neurais-de-grafos-heterogeneos"
version = "0.1.0"
description = ""
authors = ["JoaoPasseri <jvpmamorim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
